Change TaskInstance API to be a patch statement
